# wyred

./: CLAUDE.md  README.md  pyproject.toml
docs/: artifacts.md  crosscheck.md  emit.md  index.md  rebuild.md
src/wyred/: __init__.py  concepts.py  core.py  crosscheck.py  emit.py  engine.py  parts.py  paths.py  rebuild.py  resolve.py
